# ome-music

./: .gitignore  CONTRIBUTING.md  Dockerfile.api  Dockerfile.build  README.md  README.zh-CN.md  eslint.config.mjs  index.html  package-lock.json  package.json  release-notes.md  tsconfig.node.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.trae/specs/fix-windows-installer-runtime-lock/: checklist.md  spec.md  tasks.md
docs/: BUILD.md  CHANGELOG.md  CONFIGURATION.md  MAINTENANCE.md  PRODUCT.md  TODO-app-refactor.md  TROUBLESHOOTING.md
scripts/: docs-check.mjs  prepare-netease-runtime.ps1  size-audit.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_mood_note_rename_and_indexes.sql  003_authorized_music_directories.sql
src-tauri/resources/: README.txt
src-tauri/resources/netease-runtime/: package-lock.json  package.json
src-tauri/src/: lib.rs
src/components/: ArtworkImage.tsx  DanmakuAtmosphereLayer.tsx  DjCuratorPanel.tsx  ErrorBoundary.tsx  GlobalDanmakuAtmosphereLayer.tsx  LyricsSourceMenu.tsx  MomentPickPanel.tsx  NowPlayingHero.tsx  OmeRadioPanel.tsx  OnboardingOverlay.tsx  PlayerControls.tsx  PlaylistAnalysisPanel.tsx  ProviderSettingsPanel.tsx  QueueDrawer.tsx  TopSearch.tsx  WindowTitlebar.tsx
src/data/: mockLibrary.ts
src/features/artwork/: resolveTrackCover.ts
src/styles/: globals.css
src/types/: music.ts
(+21 files in other folders)
