[package]
name = "ome-music-player"
version = "0.3.4"
description = "Local-first private music player desktop app"
authors = ["Ome"]
license = "MIT"
edition = "2021"

[lib]
name = "ome_music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
lofty = "0.24"
base64 = "0.22"
md5 = "0.7"
sha1 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "gzip", "brotli", "deflate"] }
flate2 = "1"
keyring = "3"
tokio = { version = "1", features = ["time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "z"
